--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- <meta name="google-signin-client_id" content="472631042467-p0vitv9hkneo0l2s5bljos28dojdrcc2.apps.googleusercontent.com"> -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,6 +26,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Phonebook-thunk</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
